# Konvoy

./: .replit  fare.json  pyproject.toml  replit.md  response.html
attached_assets/: Pasted--Fix-VERY-IMPORTANT-Fingerprints-should-be-identity-pla_1768374948369.txt  Pasted--GOAL-reframed-correctly-Every-15-minutes-Monitor-all-h_1768376429379.txt  Pasted--Host-cn-geo1-uber-com-x-uber-device-location-latitude-_1767353373969.txt  Pasted--Improvement-1-Add-a-prediction-layer-BEFORE-dedup-You-_1768374693541.txt  Pasted--Issue-1-You-re-learning-on-noisy-labels-Your-entire-Le_1768375262239.txt  Pasted--Problem-1-Overlapping-grid-points-cause-duplicate-sigh_1768375100532.txt  Pasted--WHAT-NEEDS-TO-BE-UPGRADED-PRIORITY-ORDER-1-Driver-Iden_1768303278598.txt  Pasted--a-href-url-for-live-drivers-page-class-flex-items-cent_1768097300480.txt  Pasted--div-id-drivers-nearby-section-class-pt-3-border-t-bord_1768100057128.txt  Pasted--form-flowType-INITIAL-screens-s-1767262308077_1767262308078.txt  Pasted--vehicles-uuid-dcf7355d-73f7-4081-b1f7-6b6bc4aee6f6-lic_1766710096999.txt  Pasted-1-Dwell-time-bug-this-is-a-real-bug-In-update-driver-yo_1768375388049.txt  Pasted-import-requests-cookies-marketing-vistor-id-995344a0-0c_1768031862126.txt
uber/: cache.py  config.py  forms.py  main.py  models.py  replitmail.py  uber.py
uber/intelligence/: __init__.py  daemon.py  dedup.py  grid.py  learning.py  trajectory.py
uber/objects/: uberDev.py
uber/source/: cred.py  sslfile.pem
uber/static/: service-worker.js
uber/templates/: about.html  admin.html  admin_broadcast.html  base.html  (+31 more)
