[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cryptography>=46.0.3",
    "email-validator>=2.3.0",
    "eventlet>=0.40.4",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-socketio>=5.6.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "py-vapid>=1.9.2",
    "python-socketio>=5.16.0",
    "pywebpush>=2.1.2",
    "requests>=2.32.5",
    "werkzeug>=3.1.4",
]
